561 Final Exam 2nd

--- a/docs/assignment561/fe561.Rmd
+++ b/docs/assignment561/fe561.Rmd
@@ -14,7 +14,7 @@ output: html_document
 
 For k is an integer,
 
-$$\Gamma(\frac{2k+1}2)=(k-\frac12)\Gamma(k-\frac12)=(k-\frac12)(k-\frac32)\Gamma(k-\frac32)=...=\prod_{i=1}^k(k-i+\frac{1}2)\Gamma(\frac12)=\prod_{i=1}^{k}(i-\frac{1}2)\sqrt{\pi}$$
+$$\Gamma(\frac{2k+1}2)=(k-\frac12)\Gamma(k-\frac12)=(k-\frac12)(k-\frac32)\Gamma(k-\frac32)=...=\prod_{i=1}^k(k-i+\frac{1}2)\Gamma(\frac12)=\prod_{i=2}^{k}(i-\frac{1}2)\sqrt{\pi}$$
 
 #### 2. 
 
@@ -30,7 +30,7 @@ or following a Gamma process with $\alpha=10,\beta=1.5$.
 
 $$\frac{1}{\Gamma(10)1.5^{10}}8^{10-1}e^{-\frac{8}{1.5}}=0.7576078$$
 
-```{r}
+```{r, include=FALSE}
 1-ppois(9, 8/(2/3), lower.tail = TRUE, log.p = FALSE)
 
 pgamma(8, 10, rate = 1.5, lower.tail = TRUE,log.p = FALSE)
@@ -61,7 +61,7 @@ According to Chebyshev's Inequality: for constant k>0, $P(|X−\mu|<\sigma k)\ge
 
 $$P(\mu−1.5\sigma<X<\mu+1.5\sigma)=P(|X−\mu|<1.5\sigma)\ge1−\frac1{{1.5}^2}=0.5555556$$
 
-```{r}
+```{r, include=FALSE}
 1-1/(1.5^2)
 ```
 
@@ -161,7 +161,7 @@ $x+1\ge\lambda$ or $x\ge\lambda-1$
 Since x is a non-negative integer which also must satisfy $\lambda-1\le x\le \lambda$, so $x=\lambda$ where $\lambda$ denotes the greatest integer that does not exceed $\lambda$. If the parameter $\lambda$ is itself a positive integer then, by virtue of $\lambda-1\le x\le \lambda$, the distribution is
 bimodal with the two modes located at $x=\lambda-1$ and $x=\lambda$.
 
-Therefore, $\mu\in(2,3)$ for x=1 is the unique mode.
+Therefore, $\mu\in(1,2)$ for x=1 is the unique mode.
 
 ###
 
