--- a/docs/lecture561/lecture00.Rmd
+++ b/docs/lecture561/lecture00.Rmd
@@ -728,6 +728,25 @@ $Beta(a, b)$ | $x\in(0,1)$ | $\frac{1}{B(a,b)}x^{a-1}(1-x)^{b-1}$ | $\frac{a}{a+
 $\chi_p^2$ | $x>0$ | $\frac{1}{2^{\frac{p}2}\Gamma(\frac{p}2)}x^{\frac{p}2-1}e^{-\frac{x}2}$ | $p$ | $2p+p^2$ | $2p$ | $(1-2t)^{-\frac{p}2}, t<\frac12$
 $t_n$ | $ $ | $\frac{\Gamma(\frac{n+1}2)}{\sqrt{n\pi} \Gamma(\frac{n}2)} (1+\frac{x^2}n)^{-\frac{n+1}2}$ | $0,n>1$ | $ $ | $\frac{n}{n-2},n>2$ | $\times$
 
+code | distribution
+|---|---
+dbinom(k,n,p) | PMF $P(X=k)$ for $X \sim \Bin(n,p)$
+pbinom(x,n,p) | CDF $P(X \leq x)$ for $X \sim \Bin(n,p)$
+qbinom(a,n,p) |   $a$th quantile for $X \sim \Bin(n,p)$
+rbinom(r,n,p) |  vector of $r$ i.i.d.~$\Bin(n,p)$ r.v.s
+dgeom(k,p) | PMF $P(X=k)$ for $X \sim \Geom(p)$
+dhyper(k,w,b,n) | PMF $P(X=k)$ for $X \sim \HGeom(w,b,n)$
+dnbinom(k,r,p) | PMF $P(X=k)$ for $X \sim \NBin(r,p)$
+dpois(k,r) | PMF $P(X=k)$ for $X \sim \Pois(r)$
+dbeta(x,a,b) | PDF $f(x)$ for $X \sim \Beta(a,b)$
+dchisq(x,n) | PDF $f(x)$ for $X \sim \chi^2_n$
+dexp(x,b) | PDF $f(x)$ for $X \sim \Expo(b)$
+dgamma(x,a,r) | PDF $f(x)$ for $X \sim \Gam(a,r)$
+dlnorm(x,m,s) | PDF $f(x)$ for $X \sim \mathcal{LN(m,s^2)$
+dnorm(x,m,s) | PDF $f(x)$ for $X \sim \N(m,s^2)$
+dt(x,n) | PDF $f(x)$ for $X \sim t_n$
+dunif(x,a,b) | PDF $f(x)$ for $X \sim \Unif(a,b)$
+
 
 `2018.10.18`
 
